<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/title_detail" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="60dp"
        >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingLeft="10dp" 
	        android:paddingTop="20dp"
	        >
	        <TextView 
		        android:id="@+id/notify_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10.0dip"
		        android:layout_marginLeft="5.0dip"
		        android:text="@string/str_notify_text"
		        android:textSize="25.0sp"
		        android:textStyle="bold"/>
	    
		    <TextView 
		        android:id="@+id/rule_1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20.0dip"
		        android:layout_marginLeft="5.0dip"
		        android:text="@string/str_rule_1"/>
		    
		    <TextView 
		        android:id="@+id/rule_2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10.0dip"
		        android:layout_marginLeft="5.0dip"
		        android:text="@string/str_rule_2"/>
		    
		    <TextView 
		        android:id="@+id/rule_3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10.0dip"
		        android:layout_marginLeft="5.0dip"
		        android:text="@string/str_rule_3"/>
		    
		    <TextView 
		        android:id="@+id/rule_4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10.0dip"
		        android:layout_marginLeft="5.0dip"
		        android:text="@string/str_rule_4"/>
		    
		    <TextView 
		        android:id="@+id/rule_5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10.0dip"
		        android:layout_marginLeft="5.0dip"
		        android:text="@string/str_rule_5"/>
		        
		</LinearLayout>
		    
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:gravity="center"
	        android:orientation="vertical"
	        >
	        <ImageView 
	            android:id="@+id/qrcode"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/qrcode"
	            android:contentDescription="@string/str_cp"
	            android:scaleType="fitCenter"/>
	        <TextView 
	            android:id="@+id/qrtext"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/str_qrcode_download"/>
	        
	    </LinearLayout>
        
    </LinearLayout>
  </ScrollView>
	<RelativeLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="-60dp">
	        
	        <Button
		        android:id="@+id/begin_task"
		        android:layout_width="fill_parent"
		        android:layout_height="60dip"
		        android:layout_alignParentBottom="true"
		        android:background="#1E90FF"
		        android:text="@string/str_begin_task"
		        android:textColor="@color/white" />
	        
    </RelativeLayout>
   
</LinearLayout>
