<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/gainsboro">
    
    <include layout="@layout/title_historydetail" />
    
        
   <EditText 
       android:id="@+id/et_phone_cp"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:hint="@string/str_phonenumber"
       android:background="@drawable/et"
       android:inputType="phone"
       android:padding="2dp"
       android:textSize="20sp"
       android:layout_marginTop="50dp"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:layout_marginBottom="15dp"
       />
   
   <EditText 
       android:id="@+id/et_old_passwd"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:hint="@string/str_old_passwd"
       android:inputType="textPassword"
       android:background="@drawable/et"
       android:padding="2dp"
       android:textSize="20sp"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:layout_marginBottom="15dp"
       />
   
   <EditText 
       android:id="@+id/et_new_passwd"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:hint="@string/str_new_passwd"
       android:inputType="textPassword"
       android:background="@drawable/et"
       android:textSize="20sp"
       android:padding="2dp"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:layout_marginBottom="15dp"
       />
        
   <Button
       android:id="@+id/btn_changePasswd"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:text="@string/str_cp"
       android:background="#1E90FF" 
       />
    

</LinearLayout>
