<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:background="#393A3F"
    
     >
    
    <ImageButton 
        android:id="@+id/img_back2welcome"
        android:contentDescription="@string/back_str"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/back"
        android:background="#00000000"
        android:layout_marginLeft="10dp"
        android:scaleType="fitCenter"
        android:layout_centerVertical="true"
         />
    
    <View 
        android:id="@+id/vertical_divide_line"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_toRightOf="@id/img_back2welcome"
        android:layout_marginLeft="10dp"
        android:background="#333333"
        android:layout_centerVertical="true"/>
    
    <TextView 
        android:id="@+id/tv_get_sms"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical"
        android:text="@string/str_detail_task"
        android:layout_toRightOf="@id/vertical_divide_line"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_centerVertical="true"
        />
    
    <ImageButton
        android:id="@+id/btn_me"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:background="#00000000"
        android:contentDescription="@string/str_me"
        android:scaleType="fitCenter"
        android:src="@drawable/me" 
        android:layout_centerVertical="true"/>

</RelativeLayout>
