<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gainsboro" >
    
    <include layout="@layout/title_account"/>

    <LinearLayout
        android:id="@+id/ll_my_wallet"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/whitesmoke"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/icon_wallet"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:background="#00000000"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_wallet" />

        <TextView
            android:id="@+id/tv_my_wallet"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/str_wallet"
            android:textSize="18sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_record_task"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0.1dp"
        android:background="@color/whitesmoke"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/icon_recordtask"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:background="#00000000"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_recordtask" />

        <TextView
            android:id="@+id/tv_recordtask"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/str_record_task"
            android:textSize="18sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/per_setting"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/whitesmoke"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/icon_setting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:background="#00000000"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/changpwd" />

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/str_per_setting"
            android:textSize="18sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/ll_faq"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/whitesmoke"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/icon_faq"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:background="#00000000"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_faq" />

        <TextView
            android:id="@+id/tv_faq"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/str_FAQ"
            android:textSize="18sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/feedback"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0.1dp"
        android:background="@color/whitesmoke"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/icon_feedback"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:background="#00000000"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_feedback" />

        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/str_feedback_pro"
            android:textSize="18sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    
    <Button 
        android:id="@+id/btn_quit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/str_quit"
        android:textColor="@color/red"
        android:background="@color/whitesmoke"/>

</LinearLayout>
